internal/translator/testdata/prefix-rewrite/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: app
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: app
      port: 80
  - conditions:
    - prefix: /service2
    pathRewritePolicy:
      replacePrefix:
      - replacement: /
    services:
    - name: app-service
      port: 80
  virtualhost:
    fqdn: app.example.com
